--- a/maintenance/styles.css
+++ b/maintenance/styles.css
@@ -1,3 +1,5 @@
+/* Special thanks to RobotWizard for the 'Bouncing DVD Logo', which was used in part to construct this maintenance page. */
+
 body {
     margin: 0;
     box-sizing: border-box;
